--- a/app/index.html
+++ b/app/index.html
@@ -36,8 +36,8 @@
             <div class="jumbotron home">
                 <h1>Solution Providers</h1>
                 <p class="lead">
-                    My Edu World "Drive" - 
-                    We provide solutions for HCL EduWorld, an innovative educational device. Packaged with curriculum mapped digital content, educational applications & games, educational videos, and eBooks which makes revision fun & home learning- a self paced, enjoyable experience.
+                    My Edu World "Drive" partners - 
+                    We are partners / solution providers for HCL EduWorld, an innovative educational software solution. The offering is packaged with curriculum mapped digital content, educational applications, games, educational videos, and eBooks which makes revision fun and home learning- a self paced, enjoyable experience.
                 </p>
             </div>
 
