--- a/app/index.html
+++ b/app/index.html
@@ -34,9 +34,9 @@
             </div>
 
             <div class="jumbotron home">
-                <h1>Solution Providers</h1>
+                <h1>Hello</h1>
                 <p class="lead">
-                    My Edu World "Drive" partners - 
+                    <b>We are Edu World "Drive" partners.</b><br/>
                     We are partners / solution providers for HCL EduWorld, an innovative educational software solution. The offering is packaged with curriculum mapped digital content, educational applications, games, educational videos and eBooks which makes revision fun and home learning - a self paced, enjoyable experience.
                 </p>
             </div>
